# ZFundPilot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile  LICENSE  README.md  README_EN.md  analysis.py  app.py  config.py  context.md  data_io.py  db.py  docker-compose.yml  fetch_fund.py  models.py  pyproject.toml  rebalance.py  requirements.txt  risk.py  update.sh
data/: auth.json  sector_map.json
docs/: CONTEXT.md  DATABASE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ChartContainer.tsx  ConfirmDialog.tsx  EmptyState.tsx  ErrorState.tsx  FeeBreakdownCard.tsx  Layout.tsx  LoadingState.tsx  Logo.tsx  LogoBreathing.tsx  LogoCoinFlip.tsx  LogoCompass.tsx  LogoHeartbeat.tsx  LogoMeteor.tsx  LogoPrism.tsx  LogoRipple.tsx  LogoSand.tsx  LogoShuffle.tsx  LogoSpinner.tsx  LogoSplash.tsx  LogoTyping.tsx  MetricCard.tsx  PageHeader.tsx  PnLCalendar.tsx  SortHeader.tsx  ThemeToggle.tsx
frontend/src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  dialog.tsx  (+7 more)
frontend/src/lib/: actionLabels.ts  auth.ts  channelColors.ts  channels.ts  chartPalette.ts  colorTheme.ts  format.ts  grid.ts  rangeLabels.ts  theme.ts  useApi.ts
frontend/src/pages/: AIChat.tsx  FundCompare.tsx  FundDetail.tsx  Home.tsx  Login.tsx  NavUpdate.tsx  Overview.tsx  Positions.tsx  Returns.tsx  Risk.tsx  Settings.tsx  Transactions.tsx
src/zfundpilot/: __init__.py  ai.py  analysis.py  api.py  compare.py  config.py  data_io.py  db.py  fetch_estimate.py  fetch_fund.py  fund_filter.py  models.py  rebalance.py  risk.py  scheduler.py
tests/: test_analysis.py  test_data_io.py  test_models.py  test_risk.py
